<resources>
    <string name="app_name">SiWaSiS</string>
    <string name="action_settings">Settings</string>
    <string name="btn_kewajaran">Periksa Kewajaran dan Konsistensi</string>
    <string name="btn_konversi">Konversi</string>
    <string name="btn_rh">Rentang Harga</string>
    <string name="title_activity_kewajaran">KewajaranActivity</string>
    <string name="title_activity_blok">BlokActivity</string>
    <string name="title_upload_pic">Upload Photo</string>

</resources>
