<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minWidth="25px"
                android:minHeight="25px">

    <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="top"
            android:minHeight="200dip"
            android:minWidth="200dip"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/side_nav_bar"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="75dip"
                    android:layout_height="75dip"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:src="@mipmap/ssn_logo" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dip"
                    android:fontFamily="monospace"
                    android:text="@string/app_name"
                    android:textSize="29sp" />


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dip"
                    android:fontFamily="serif-monospace"
                    android:text="APLIKASI PEMERIKSAAN KEWAJARAN DAN KONSITENSI SUSENAS"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="normal|bold" />

        </LinearLayout>

        <Button
                android:id="@+id/kewajaran"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/side_nav_bar"
                android:text="@string/btn_kewajaran"
                android:textColor="#ffffff" />

        <Button
                android:id="@+id/konversi"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/side_nav_bar"
                android:text="@string/btn_konversi"
                android:textColor="#ffffff" />

        <Button
                android:id="@+id/rentang_harga"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/side_nav_bar"
                android:text="@string/btn_rh"
                android:textColor="#ffffff" />



        <ImageView
                android:id="@+id/imagePic"
                android:layout_width="75dip"
                android:layout_height="75dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/nav_profil_pic"
                android:src="@mipmap/prof_pic" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:text="@string/title_upload_pic"
                android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>